# 2D_python

./: .gitignore  debug.py  game.py  pyproject.toml  requirement.txt
