[tool.poetry]
name = "2d_python"
version = "0.1.0"
description = ""
authors = ["hayapo <keep.forward1001@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9 <3.10"
pygame = "1.9.6"
numpy = "^1.21.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
